--- a/.env.dev
+++ b/.env.dev
@@ -17,12 +17,12 @@ SERVICE_USER_SECRET=bolnisiDoNotUseInProduction
 API_EXPOSED_PORT=8080
 API_LOCAL_BIND_PORT=8081
 # BOLNISI_KEYCLOAK_API_SECRET=manage_bolnisi_users
-BOLNISI_KEYCLOAK_API_SECRET="**********"
+BOLNISI_KEYCLOAK_API_SECRET="13UwbHQdPSBYcluQWJDmv4Lwgb75WIz0"
 SPRING_EXECUTION_POOL_CORE_SIZE=5
 SPRING_EXECUTION_POOL_MAX_SIZE=10
 SPRING_EXECUTION_THREAD_NAME_PREFIX=Async-
 # Same as `BOLNISI_KEYCLOAK_API_SECRET` if colocated deployment
-METABUS_KEYCLOAK_CLIENT_SECRET="**********"
+METABUS_KEYCLOAK_CLIENT_SECRET="13UwbHQdPSBYcluQWJDmv4Lwgb75WIz0"
 ENCRYPT_PASSWORD=thisisarandompassword
 FRONTEND_LOGIN_PATH=/login
 FRONTEND_DOMAIN_HOST=localhost
