--- a/.env.staging
+++ b/.env.staging
@@ -1,28 +1,28 @@
-# bolnisi api section
+# originate api section
 SPRING_PROFILES_ACTIVE=dev
 DB_USER_NAME=proofoforiginadmin
-DB_USER_SECRET=bolnisiDoNotUseInProduction
+DB_USER_SECRET=originateDoNotUseInProduction
 API_DB_NAME=cf_proof_of_origin
 SERVICE_USER_NAME=proofoforiginservice
-SERVICE_USER_SECRET=bolnisiDoNotUseInProduction
+SERVICE_USER_SECRET=originateDoNotUseInProduction
 API_EXPOSED_PORT=8080
 API_LOCAL_BIND_PORT=8082
-BOLNISI_KEYCLOAK_API_SECRET="**********"
+ORIGINATE_KEYCLOAK_API_SECRET="**********"
 SPRING_EXECUTION_POOL_CORE_SIZE=5
 SPRING_EXECUTION_POOL_MAX_SIZE=10
 SPRING_EXECUTION_THREAD_NAME_PREFIX=Async-
 METABUS_KEYCLOAK_CLIENT_SECRET="**********"
 ENCRYPT_PASSWORD=thisisarandompassword
 FRONTEND_LOGIN_PATH=/login
-FRONTEND_DOMAIN_HOST=stg.cf-bolnisi-preprod.eu-west-1.originate.company.com
-FRONTEND_DOMAIN_PUBLIC_URL=https://stg.cf-bolnisi-preprod.eu-west-1.originate.company.com
-BOLNISI_BACKEND_HOST=api.stg.cf-bolnisi-preprod.eu-west-1.originate.company.com
-BOLNISI_BACKEND_API=https://api.stg.cf-bolnisi-preprod.eu-west-1.originate.company.com
+FRONTEND_DOMAIN_HOST=stg.cf-originate-preprod.eu-west-1.originate.company.com
+FRONTEND_DOMAIN_PUBLIC_URL=https://stg.cf-originate-preprod.eu-west-1.originate.company.com
+ORIGINATE_BACKEND_HOST=api.stg.cf-originate-preprod.eu-west-1.originate.company.com
+ORIGINATE_BACKEND_API=https://api.stg.cf-originate-preprod.eu-west-1.originate.company.com
 MOBILE_IOS_SCANNINGAPP_DOMAIN=capacitor://localhost
 MOBILE_ANDROID_SCANNINGAPP_DOMAIN=http://localhost
 
-# bolnisi db section
-BOLNISI_DB_CONTAINER_NAME=db
+# originate db section
+ORIGINATE_DB_CONTAINER_NAME=db
 DB_IMAGE_NAME=postgres
 DB_IMAGE_TAG=15.3
 DB_LOCAL_BIND_PORT=54322
@@ -34,11 +34,11 @@ STATE_DB_IMAGE_TAG=15.3
 STATE_DB_LOCAL_BIND_PORT=54325
 STATE_DB_EXPOSED_PORT=5432
 STATE_DB_USER_NAME=proofoforiginadmin
-STATE_DB_USER_SECRET=bolnisiDoNotUseInProduction
+STATE_DB_USER_SECRET=originateDoNotUseInProduction
 STATE_DB_NAME=state_storage
 STATE_DB_HOST=state-storage
 
-# bolnisi web section
+# originate web section
 FRONTEND_LOCAL_BIND_PORT=3002
 FRONTEND_EXPOSED_PORT=80
 
@@ -126,9 +126,9 @@ KEYCLOAK_DB_VENDOR=postgres
 KEYCLOAK_KEYCLOAK_USER=cardano-admin
 KEYCLOAK_KEYCLOAK_PASSWORD=Cardano@12345
 KEYCLOAK_START_TYPE=start
-KC_HOSTNAME=auth.stg.cf-bolnisi-preprod.eu-west-1.originate.company.com
-KEYCLOAK_HOST=https://auth.stg.cf-bolnisi-preprod.eu-west-1.originate.company.com
-KEYCLOAK_REALM_NAME=BolnisiPilotApplication
+KC_HOSTNAME=auth.stg.cf-originate-preprod.eu-west-1.originate.company.com
+KEYCLOAK_HOST=https://auth.stg.cf-originate-preprod.eu-west-1.originate.company.com
+KEYCLOAK_REALM_NAME=OriginatePilotApplication
 KC_PROXY=edge
 
 # kafka section
@@ -155,10 +155,10 @@ REACT_APP_REDIRECT_KEY_CLOAK_LOGOUT_AUTHORIZE_QUERY = "logoutCode=401"
 METABUS_OFFCHAIN_CONTAINER_NAME=metabus-offchain-storage
 METABUS_OFFCHAIN_EXPOSED_PORT=8080
 METABUS_OFFCHAIN_LOCAL_BIND_PORT=8062
-METABUS_OFFCHAIN_HOSTNAME=offchain.stg.cf-bolnisi-preprod.eu-west-1.originate.company.com
+METABUS_OFFCHAIN_HOSTNAME=offchain.stg.cf-originate-preprod.eu-west-1.originate.company.com
 METABUS_OFFCHAIN_MINIO_ENDPOINT=http://minio
 METABUS_OFFCHAIN_MINIO_SECURE=false
-METABUS_OFFCHAIN_MINIO_HOST=minio.stg.cf-bolnisi-preprod.eu-west-1.originate.company.com
+METABUS_OFFCHAIN_MINIO_HOST=minio.stg.cf-originate-preprod.eu-west-1.originate.company.com
 METABUS_OFFCHAIN_MINIO_PUBLIC_ENDPOINT=https://${METABUS_OFFCHAIN_MINIO_HOST}
 METABUS_OFFCHAIN_MINIO_BUCKET_NAME=commons
 METABUS_OFFCHAIN_MINIO_IMAGE_SIZE=10485760
@@ -188,13 +188,13 @@ RABBITMQ_LOCAL_MANAGEMENT_EXPOSE_PORT=15672
 RABBITMQ_USER_NAME=guest
 RABBITMQ_PASSWORD=guest
 RABBITMQ_EXCHANGE=job
-RABBITMQ_ROUTING_KEY_BOLNISI=bolnisi
-RABBITMQ_QUEUE_BOLNISI=bolnisi
-RABBITMQ_MESSAGE_TTL_BOLNISI=345600000
-RABBITMQ_HAS_DLQ_BOLNISI=true
-DEAD_LETTER_QUEUE=bolnisi-dead-letter-queue
-DEAD_LETTER_EXCHANGE=bolnisi-dead-letter-exchange
-DEAD_LETTER_ROUTING_KEY=bolnisi-dead
+RABBITMQ_ROUTING_KEY_ORIGINATE=originate
+RABBITMQ_QUEUE_ORIGINATE=originate
+RABBITMQ_MESSAGE_TTL_ORIGINATE=345600000
+RABBITMQ_HAS_DLQ_ORIGINATE=true
+DEAD_LETTER_QUEUE=originate-dead-letter-queue
+DEAD_LETTER_EXCHANGE=originate-dead-letter-exchange
+DEAD_LETTER_ROUTING_KEY=originate-dead
 
 # redis
 REDIS_MASTER_HOST = cardano-redis-master
