--- a/metabus/cardano-metabus-api/src/test/resources/application-ut.yml
+++ b/metabus/cardano-metabus-api/src/test/resources/application-ut.yml
@@ -5,9 +5,9 @@ metabus:
 
   security:
     endpointAuthorizations:
-      - { urlPattern: "/api/v1/jobs/**", roles: [ "BOLNISI_APPLICATION", "ADMIN" ] }
+      - { urlPattern: "/api/v1/jobs/**", roles: [ "ORIGINATE_APPLICATION", "ADMIN" ] }
     jobTypeAuthorizations:
-      - { roles: [ "BOLNISI_APPLICATION", "ADMIN" ], allowedJobTypes: [ "bolnisi_cert", "bolnisi_lot" ] }
+      - { roles: [ "ORIGINATE_APPLICATION", "ADMIN" ], allowedJobTypes: [ "originate_cert", "originate_lot" ] }
 spring:
   autoconfigure:
     exclude:
