--- a/mobileapp/public/manifest.json
+++ b/mobileapp/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "CF Bolnisi",
-  "name": "CF Bolnisi",
+  "short_name": "CF Originate",
+  "name": "CF Originate",
   "icons": [
     {
       "src": "favicon.ico",
