--- a/.env.dev
+++ b/.env.dev
@@ -7,34 +7,34 @@
 ###
 ### 127.0.0.1 localhost keycloak
 
-# bolnisi api section
+# originate api section
 SPRING_PROFILES_ACTIVE=dev,yaci
 DB_USER_NAME=proofoforiginadmin
-DB_USER_SECRET=bolnisiDoNotUseInProduction
+DB_USER_SECRET=originateDoNotUseInProduction
 API_DB_NAME=cf_proof_of_origin
 SERVICE_USER_NAME=proofoforiginservice
-SERVICE_USER_SECRET=bolnisiDoNotUseInProduction
+SERVICE_USER_SECRET=originateDoNotUseInProduction
 API_EXPOSED_PORT=8080
 API_LOCAL_BIND_PORT=8081
-# BOLNISI_KEYCLOAK_API_SECRET=manage_bolnisi_users
-BOLNISI_KEYCLOAK_API_SECRET="**********"
+# ORIGINATE_KEYCLOAK_API_SECRET=manage_originate_users
+ORIGINATE_KEYCLOAK_API_SECRET="**********"
 SPRING_EXECUTION_POOL_CORE_SIZE=5
 SPRING_EXECUTION_POOL_MAX_SIZE=10
 SPRING_EXECUTION_THREAD_NAME_PREFIX=Async-
-# Same as `BOLNISI_KEYCLOAK_API_SECRET` if colocated deployment
+# Same as `ORIGINATE_KEYCLOAK_API_SECRET` if colocated deployment
 METABUS_KEYCLOAK_CLIENT_SECRET="**********"
 ENCRYPT_PASSWORD=thisisarandompassword
 FRONTEND_LOGIN_PATH=/login
 FRONTEND_DOMAIN_HOST=localhost
 FRONTEND_DOMAIN_PUBLIC_URL=http://localhost:3010
-BOLNISI_BACKEND_HOST=localhost
-BOLNISI_BACKEND_API=http://localhost:8081
+ORIGINATE_BACKEND_HOST=localhost
+ORIGINATE_BACKEND_API=http://localhost:8081
 MOBILE_IOS_SCANNINGAPP_DOMAIN=capacitor://localhost
 MOBILE_ANDROID_SCANNINGAPP_DOMAIN=http://localhost
 CERTIFICATE_SIGNATURE_VERIFICATION_DISABLED=true
 
-# bolnisi db section
-BOLNISI_DB_CONTAINER_NAME=db
+# originate db section
+ORIGINATE_DB_CONTAINER_NAME=db
 DB_IMAGE_NAME=postgres
 DB_IMAGE_TAG=15.3
 DB_LOCAL_BIND_PORT=54321
@@ -46,11 +46,11 @@ STATE_DB_IMAGE_TAG=15.3
 STATE_DB_LOCAL_BIND_PORT=54324
 STATE_DB_EXPOSED_PORT=5432
 STATE_DB_USER_NAME=proofoforiginadmin
-STATE_DB_USER_SECRET=bolnisiDoNotUseInProduction
+STATE_DB_USER_SECRET=originateDoNotUseInProduction
 STATE_DB_NAME=state_storage
 STATE_DB_HOST=state-storage
 
-# bolnisi web section
+# originate web section
 FRONTEND_LOCAL_BIND_PORT=3010
 FRONTEND_EXPOSED_PORT=80
 FRONTEND_KEYCLOAK_HOST=http://keycloak:8080
@@ -139,7 +139,7 @@ KEYCLOAK_KEYCLOAK_PASSWORD=Cardano@12345
 KEYCLOAK_START_TYPE=start-dev
 KC_HOSTNAME=keycloak
 KEYCLOAK_HOST=http://keycloak:8080
-KEYCLOAK_REALM_NAME=BolnisiPilotApplication
+KEYCLOAK_REALM_NAME=OriginatePilotApplication
 KC_PROXY=edge
 
 # kafka section
@@ -166,10 +166,10 @@ REACT_APP_REDIRECT_KEY_CLOAK_LOGOUT_AUTHORIZE_QUERY = "logoutCode=401"
 METABUS_OFFCHAIN_CONTAINER_NAME=metabus-offchain-storage
 METABUS_OFFCHAIN_EXPOSED_PORT=8080
 METABUS_OFFCHAIN_LOCAL_BIND_PORT=8061
-METABUS_OFFCHAIN_HOSTNAME=dev.offchain.cf-bolnisi-wine-preprod.originate.company.com
+METABUS_OFFCHAIN_HOSTNAME=dev.offchain.cf-originate-wine-preprod.originate.company.com
 METABUS_OFFCHAIN_MINIO_ENDPOINT=http://minio
 METABUS_OFFCHAIN_MINIO_SECURE=false
-METABUS_OFFCHAIN_MINIO_HOST=dev.minio.cf-bolnisi-wine-preprod.originate.company.com
+METABUS_OFFCHAIN_MINIO_HOST=dev.minio.cf-originate-wine-preprod.originate.company.com
 METABUS_OFFCHAIN_MINIO_PUBLIC_ENDPOINT=https://${METABUS_OFFCHAIN_MINIO_HOST}
 METABUS_OFFCHAIN_MINIO_BUCKET_NAME=commons
 METABUS_OFFCHAIN_MINIO_IMAGE_SIZE=10485760
@@ -199,13 +199,13 @@ RABBITMQ_LOCAL_MANAGEMENT_EXPOSE_PORT=15672
 RABBITMQ_USER_NAME=guest
 RABBITMQ_PASSWORD=guest
 RABBITMQ_EXCHANGE=job
-RABBITMQ_ROUTING_KEY_BOLNISI=bolnisi
-RABBITMQ_QUEUE_BOLNISI=bolnisi
-RABBITMQ_MESSAGE_TTL_BOLNISI=345600000
-RABBITMQ_HAS_DLQ_BOLNISI=true
-DEAD_LETTER_QUEUE=bolnisi-dead-letter-queue
-DEAD_LETTER_EXCHANGE=bolnisi-dead-letter-exchange
-DEAD_LETTER_ROUTING_KEY=bolnisi-dead
+RABBITMQ_ROUTING_KEY_ORIGINATE=originate
+RABBITMQ_QUEUE_ORIGINATE=originate
+RABBITMQ_MESSAGE_TTL_ORIGINATE=345600000
+RABBITMQ_HAS_DLQ_ORIGINATE=true
+DEAD_LETTER_QUEUE=originate-dead-letter-queue
+DEAD_LETTER_EXCHANGE=originate-dead-letter-exchange
+DEAD_LETTER_ROUTING_KEY=originate-dead
 
 # redis
 REDIS_MASTER_HOST = cardano-redis-master
