--- a/mobileapp/android/app/build.gradle
+++ b/mobileapp/android/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    namespace "cf.bolnisi.prototype"
+    namespace "cf.originate.prototype"
     compileSdkVersion rootProject.ext.compileSdkVersion
     defaultConfig {
         applicationId "cf.proofoforigin.mobileapp"
