--- a/.env.dev
+++ b/.env.dev
@@ -25,12 +25,12 @@ SPRING_EXECUTION_THREAD_NAME_PREFIX=Async-
 METABUS_KEYCLOAK_CLIENT_SECRET="**********"
 ENCRYPT_PASSWORD=thisisarandompassword
 FRONTEND_LOGIN_PATH=/login
-FRONTEND_DOMAIN_HOST=localhost
-FRONTEND_DOMAIN_PUBLIC_URL=http://localhost:3010
-ORIGINATE_BACKEND_HOST=localhost
-ORIGINATE_BACKEND_API=http://localhost:8081
-MOBILE_IOS_SCANNINGAPP_DOMAIN=capacitor://localhost
-MOBILE_ANDROID_SCANNINGAPP_DOMAIN=http://localhost
+FRONTEND_DOMAIN_HOST=ec2-3-13-20-143.us-east-2.compute.amazonaws.com
+FRONTEND_DOMAIN_PUBLIC_URL=http://ec2-3-13-20-143.us-east-2.compute.amazonaws.com:3010
+ORIGINATE_BACKEND_HOST=ec2-3-13-20-143.us-east-2.compute.amazonaws.com
+ORIGINATE_BACKEND_API=http://ec2-3-13-20-143.us-east-2.compute.amazonaws.com:8081
+MOBILE_IOS_SCANNINGAPP_DOMAIN=capacitor://ec2-3-13-20-143.us-east-2.compute.amazonaws.com
+MOBILE_ANDROID_SCANNINGAPP_DOMAIN=http://ec2-3-13-20-143.us-east-2.compute.amazonaws.com
 CERTIFICATE_SIGNATURE_VERIFICATION_DISABLED=true
 
 # originate db section
@@ -154,7 +154,7 @@ TOPIC_CONFIRMING_TRANSACTION_RETRY_COUNT_FOR_UNEXPECTED_ERROR=-1
 MOBILE_APP_KEYCLOAK_CLIENT_ID=mobile-scan-app
 MOBILE_APP_KEYCLOAK_REDIRECT_URI=cfproofoforigin://login
 SCANTRUST_SCAN_URL=https://nwxn.qr1.ch/
-MOBILE_APP_HOST_NAME=localhost
+MOBILE_APP_HOST_NAME=ec2-3-13-20-143.us-east-2.compute.amazonaws.com
 
 # web app
 ENV_FILE=.env.dev
